Update index.njk with project gh link

--- a/src/index.njk
+++ b/src/index.njk
@@ -457,7 +457,7 @@
 
     <footer>
       <span data-i18n="footer_text"></span> •
-      <a href="https://github.com/FELHASZNÁLÓNÉV/online-cv"
+      <a href="https://github.com/samthing94/static-cv-generator"
         target="_blank" rel="noreferrer"
         data-i18n="footer_link">
       </a>
